// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SeparatorView /> > renders Default story 1`] = `
<div>
  <div
    style="height: 600px;"
  >
    <div
      data-group="true"
      data-testid="react-use-id-1"
      id="react-use-id-1"
      style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: row; touch-action: pan-y;"
    >
      <div
        data-panel="true"
        data-testid="react-use-id-2"
        id="react-use-id-2"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 0 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            tabindex="0"
          >
            LEFT CONTENT
          </div>
        </div>
      </div>
      <div
        aria-controls="react-use-id-2"
        aria-label="Collapse to icons or drag to resize"
        aria-orientation="vertical"
        aria-valuemax="99.502"
        aria-valuemin="0"
        aria-valuenow="0"
        class="SeparatorView-module_separator Separator"
        data-separator="inactive"
        data-testid="react-use-id-3"
        id="react-use-id-3"
        role="separator"
        style="flex: 0 0 auto; touch-action: none;"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="SeparatorView-module_collapseIcon"
          fill="currentColor"
          height="10px"
          viewBox="0 0 24 24"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 11.034a1 1 0 0 0 .29.702l.005.005c.18.18.43.29.705.29h8a1 1 0 0 0 0-2h-5.586L22 3.445a1 1 0 0 0-1.414-1.414L14 8.617V3.031a1 1 0 1 0-2 0zm0 1.963a1 1 0 0 0-.29-.702l-.005-.004A1 1 0 0 0 11 12H3a1 1 0 1 0 0 2h5.586L2 20.586A1 1 0 1 0 3.414 22L10 15.414V21a1 1 0 0 0 2 0z"
          />
        </svg>
      </div>
      <div
        data-panel="true"
        data-testid="react-use-id-4"
        id="react-use-id-4"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 100 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            MAIN CONTENT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SeparatorView /> > renders KeyboardFocused story 1`] = `
<div>
  <div
    style="height: 600px;"
  >
    <div
      data-group="true"
      data-testid="react-use-id-1"
      id="react-use-id-1"
      style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: row; touch-action: pan-y;"
    >
      <div
        data-panel="true"
        data-testid="react-use-id-2"
        id="react-use-id-2"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 49.751 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            tabindex="0"
          >
            LEFT CONTENT
          </div>
        </div>
      </div>
      <div
        aria-controls="react-use-id-2"
        aria-label="Collapse to icons or drag to resize"
        aria-orientation="vertical"
        aria-valuemax="99.502"
        aria-valuemin="0"
        aria-valuenow="49.751"
        class="SeparatorView-module_separator Separator SeparatorView-module_focused"
        data-separator="inactive"
        data-testid="react-use-id-3"
        id="react-use-id-3"
        role="separator"
        style="flex: 0 0 auto; touch-action: none;"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="SeparatorView-module_collapseIcon"
          fill="currentColor"
          height="10px"
          viewBox="0 0 24 24"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 11.034a1 1 0 0 0 .29.702l.005.005c.18.18.43.29.705.29h8a1 1 0 0 0 0-2h-5.586L22 3.445a1 1 0 0 0-1.414-1.414L14 8.617V3.031a1 1 0 1 0-2 0zm0 1.963a1 1 0 0 0-.29-.702l-.005-.004A1 1 0 0 0 11 12H3a1 1 0 1 0 0 2h5.586L2 20.586A1 1 0 1 0 3.414 22L10 15.414V21a1 1 0 0 0 2 0z"
          />
        </svg>
      </div>
      <div
        data-panel="true"
        data-testid="react-use-id-4"
        id="react-use-id-4"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 50.249 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            MAIN CONTENT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SeparatorView /> > renders LeftPanelExpanded story 1`] = `
<div>
  <div
    style="height: 600px;"
  >
    <div
      data-group="true"
      data-testid="react-use-id-1"
      id="react-use-id-1"
      style="height: 100%; width: 100%; overflow: hidden; display: flex; flex-flow: row; touch-action: pan-y;"
    >
      <div
        data-panel="true"
        data-testid="react-use-id-2"
        id="react-use-id-2"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 49.751 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
            tabindex="0"
          >
            LEFT CONTENT
          </div>
        </div>
      </div>
      <div
        aria-controls="react-use-id-2"
        aria-label="Collapse to icons or drag to resize"
        aria-orientation="vertical"
        aria-valuemax="99.502"
        aria-valuemin="0"
        aria-valuenow="49.751"
        class="SeparatorView-module_separator Separator"
        data-separator="inactive"
        data-testid="react-use-id-3"
        id="react-use-id-3"
        role="separator"
        style="flex: 0 0 auto; touch-action: none;"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="SeparatorView-module_collapseIcon"
          fill="currentColor"
          height="10px"
          viewBox="0 0 24 24"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 11.034a1 1 0 0 0 .29.702l.005.005c.18.18.43.29.705.29h8a1 1 0 0 0 0-2h-5.586L22 3.445a1 1 0 0 0-1.414-1.414L14 8.617V3.031a1 1 0 1 0-2 0zm0 1.963a1 1 0 0 0-.29-.702l-.005-.004A1 1 0 0 0 11 12H3a1 1 0 1 0 0 2h5.586L2 20.586A1 1 0 1 0 3.414 22L10 15.414V21a1 1 0 0 0 2 0z"
          />
        </svg>
      </div>
      <div
        data-panel="true"
        data-testid="react-use-id-4"
        id="react-use-id-4"
        style="min-height: 0px; max-height: 100%; height: auto; min-width: 0px; max-width: 100%; width: auto; border: 0px; padding: 0px; margin: 0px; display: flex; flex: 50.249 1 0px; overflow: visible;"
      >
        <div
          style="max-height: 100%; max-width: 100%; flex-grow: 1; overflow: auto; touch-action: pan-y;"
        >
          <div
            class="Flex-module_flex"
            style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
          >
            MAIN CONTENT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
